# hybrid-logic-math-reasoner

./: .coverage_meta  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PARSER_AUDIT.md  README.md  check_const.bat  latest.claude  prd.md  prd_m1_corpus_and_hardening.md  prd_milestone_0.md  prd_milestone_1.md  prd_milestone_2.md  pyproject.toml
.github/workflows/: ci.yml
docs/: m0_runbook.md  m2_field_notes.md  strategic_direction.md  tutorial.md
examples/m1/: capture_stress.pl  finite_puzzle.pl  finite_puzzle_4var.pl  kinship.pl  kinship_extended.pl  mult.pl  peano_even.pl  peano_lt.pl  peano_plus.pl  peano_times.pl  plus.pl  syllogism.pl  syllogism_andE.pl  syllogism_chained.pl
proofs/m0/: 01_modus_ponens.json  02_imp_reflexive.json  03_de_morgan.json  04_contrapositive.json  10_eq_subst.json  (+12 more)
tests/: test_capture_avoidance.py  test_cli.py  test_corpus_regression.py  test_corpus_serialisation.py  test_demos.py  test_demos_m2.py  test_dispatch_classify.py  test_dispatch_route.py  test_kb.py  test_kernel_arith_eval.py  test_kernel_coverage.py  test_kernel_isolation.py  test_kernel_sound.py  test_kernel_unresolved_meta.py  test_kernel_unsound.py  test_manual_solve.py  test_manual_solve_dispatcher.py  test_meta.py  test_outcome_format.py  test_parser.py  test_recorder.py  test_render.py  test_render_m2.py  test_renderer_property.py  test_repl_commands.py  test_repl_interactive.py  test_serialise.py  test_sld.py  test_sld_history_order.py  test_solvers_real.py  test_substitution.py  test_unifier.py  test_unify_adversarial.py  test_unify_substitution.py
(+117 files in other folders)
