[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlmr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.1",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hlmr"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.report]
# cli.py is tested via subprocess in tests/test_cli.py. pytest-cov does not
# instrument child processes, so cli.py always shows 0% in coverage reports.
# The ≥70% CLI target (prd_milestone_0.md §9.2) is met functionally but cannot
# be verified by pytest-cov without configuring coverage.py subprocess tracking.
# Do not write duplicate in-process tests to chase this number.
exclude_lines = [
    "pragma: no cover",
]
